# Memory-DB

./: .gitignore  CLAUDE.md  LICENSE  README.md  README_CN.md  docker-compose.yml  pyproject.toml
src/memory_simple/: __init__.py  admin.py  embedding.py  manage.py  server.py  service.py
tests/: test_admin.py  test_service.py
